tests/stacks/openshift/components/tektoncd/test_data/expected/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_validation.webhook.pipeline.tekton.dev.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: tekton-pipelines-webhook
    pipeline.tekton.dev/release: v0.14.0
  name: validation.webhook.pipeline.tekton.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: tekton-pipelines-webhook
      namespace: tekton-pipelines
  failurePolicy: Fail
  name: validation.webhook.pipeline.tekton.dev
  sideEffects: None
