tests/stacks/openshift/components/tektoncd/test_data/expected/rbac.authorization.k8s.io_v1_clusterrole_tekton-pipelines-leader-election.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: tekton-pipelines-leader-election
rules:
- apiGroups:
  - coordination.k8s.io
  resources:
  - leases
  verbs:
  - get
  - list
  - create
  - update
  - delete
  - patch
  - watch
