tests/stacks/openshift/components/tektoncd/test_data/expected/rbac.authorization.k8s.io_v1_clusterrolebinding_tekton-dashboard-triggers.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: tekton-dashboard
  name: tekton-dashboard-triggers
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: tekton-dashboard-triggers
subjects:
- kind: ServiceAccount
  name: tekton-dashboard
  namespace: tekton-pipelines
