tests/stacks/openshift/components/tektoncd/test_data/expected/rbac.authorization.k8s.io_v1beta1_clusterrolebinding_tekton-pipelines-webhook-leaderelection.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: tekton-pipelines-webhook
  name: tekton-pipelines-webhook-leaderelection
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: tekton-pipelines-leader-election
subjects:
- kind: ServiceAccount
  name: tekton-pipelines-webhook
  namespace: tekton-pipelines
